UtahLiveDataTest/src/objects/ProgressReportsConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores all the progress Report information related to Tasks and number of Due days etc</description>
    <fields>
        <fullName>ReportDueAge__c</fullName>
        <defaultValue>5</defaultValue>
        <description>This is number of days after Progress Report End Date when the Reports are Due</description>
        <inlineHelpText>This is number of days after Progress Report End Date when the Reports are Due</inlineHelpText>
        <label>Report Due Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SiteVisitTaskCreationAge__c</fullName>
        <description>This is the number of days before the Site Visit Start Date.</description>
        <inlineHelpText>This is the number of days before the Site Visit Start Date.</inlineHelpText>
        <label>Site Visit Task Creation Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaskCreationAge__c</fullName>
        <description>How many days before the Report Due Date should the task be created for default owner</description>
        <label>Task Creation Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaskCreationInDays__c</fullName>
        <label>TaskCreationInDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitDueAge__c</fullName>
        <description>Number of days after Site Visit End Date when the Site Visit Report is Due</description>
        <inlineHelpText>Number of days after Site Visit End Date when the Site Visit Report is Due</inlineHelpText>
        <label>Visit Due Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Progress Reports Config</label>
</CustomObject>